Align watch star correctly in Minerva
Ergg yuk.
Fix a hack with another hack

Bug: 69868

--- a/modules/new/styles/board/topic/watchlist.less
+++ b/modules/new/styles/board/topic/watchlist.less
@@ -11,11 +11,6 @@
 	&.flow-board-watch-link {
 		font-size: 1.5em;
 
-		// 1em for the size of the watch star,
-		// 0.25em for the margin-bottom on the h1
-		// 0.5em for the #contentSub
-		top: -1.75em;
-
 		// Override default right value, this div is getting a specific width
 		// (in line with other flow elements) and the icon will be floated to
 		// the right.
@@ -56,7 +51,20 @@
 	}
 }
 
+// This code is not sustainable and must be killed.
+.skin-vector .flow-board-watch-link {
+	top: -1.75em;
+}
+// FIXME: This code is not sustainable and must be killed
+.skin-minerva .flow-board-watch-link {
+	top: -2.5em;
+}
 @media all and (min-width: @wgFlowDeviceWidthTablet) {
+	// FIXME: This code is not sustainable and must be killed
+	.skin-minerva .flow-board-watch-link {
+		top: -2em;
+	}
+
 	.flow-topic-watchlist {
 		a {
 			font-size: inherit;
